# coding

./: .gitignore  README
codejam/: allyourbase.clj
codejam/2012/: skeleton.rb
codejam/2013/: README  project.clj
codejam/allyourbase/: allyourbase.clj  allyourbase2.clj
examples/autotools/: .cproject  .project
examples/autotools/src/: Makefile.am  Makefile.in  README  TODO  configure  configure.ac
examples/autotools/src/hello/: Makefile.am  Makefile.in  hello.c
examples/autotools/src/libhello/: Makefile.am  Makefile.in  libhello.c  libhello.h
examples/deflate/: Makefile  common.c  common.h  deflate.c  inflate.c  test.sh
examples/iprange/: iprange.sh
examples/jmetest/: .gitignore  TODO.md  project.clj
examples/libgdxtest/: project.clj
examples/logging/: Makefile  arguments.c  arguments.h  dynamic.c  flexible.c  static.c
examples/lwjgltest/: README.md  project.clj
examples/rqueue/: rqueue.rb
examples/socket/: Makefile  client.c  server.c
examples/vpointer/: Makefile  vpointer.c  vpointer.h
examples/xwindow/: Makefile  readme
java-exercises/: Quine.java  build.xml  ivy.xml
java-exercises/src/: Env.java
puzzles/: Rakefile
puzzles/clojure/: ones.clj
puzzles/lib/: DelimitedString.rb  Hanoi3.rb  blocks.rb  hashsort.rb  mapreduce.rb  multiples.rb  substring.rb  substring2.rb  substrings.rb  timesort.rb
puzzles/ones/: ones.clj
puzzles/quine/: quine-test.sh  quine.sh
puzzles/rubikscube/: Rakefile  solution.txt
puzzles/schedule/: README.md  project.clj
puzzles/teams/: README.md  project.clj
topcoder/: build.xml
(+72 files in other folders)
